design splash, login, signup, forgot, and profile complete screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_messaging: ^15.0.3
   firebase_analytics: ^11.2.0
   flutter_local_notifications: ^17.2.1+2
+  flutter_animate: ^4.5.0
   soft_builder:
     git: https://github.com/rezasoftbd/soft_builder.git
 
